--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@
 &lt;/div&gt;</code></pre>
 
         <h4>Accordions</h4>
-        <p>Use <code>input="radio"</code> when you want to keep only one element collapsed at a time.</p>
+        <p>Use <code>input type="radio"</code> when you want to keep only one element collapsed at a time.</p>
         <div class="row">
           <div class="collapsible">
             <input id="collapsible5" type="radio" name="collapsible">
