--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
 
 
         <h4>Accordions</h4>
-        <p>Use <code>input="radio"</code> when you want to keep only one element collapsed at a time.</p>
+        <p>Use <code>input type="radio"</code> when you want to keep only one element collapsed at a time.</p>
         <div class="row">
           <div class="collapsible">
             <input id="collapsible5" type="radio" name="collapsible">
